math-core/tests/snapshots/conversion_test__notag_in_the_wild.snap
---
source: math-core/tests/conversion_test.rs
expression: "(\\notag + 1)"
---
<math>
    <mo stretchy="false">(</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mn>1</mn>
    <mo stretchy="false">)</mo>
</math>
