math-core/tests/snapshots/conversion_test__number_with_dot.snap
---
source: math-core/tests/conversion_test.rs
expression: 4.x
---
<math>
    <mn>4</mn>
    <mi>.</mi>
    <mi>x</mi>
</math>
