math-core/tests/snapshots/conversion_test__odv.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\odv{f}{x}"
---
<math>
    <mfrac>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>f</mi>
        </mrow>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
</math>
