math-core/tests/snapshots/conversion_test__operator_name.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname{sn} x"
---
<math>
    <mo lspace="0" rspace="0.1667em">sn</mo>
    <mi>x</mi>
</math>
