math-core/tests/snapshots/conversion_test__operator_name_with_single_char.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname{a}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
