math-core/tests/snapshots/conversion_test__operator_name_with_space_cmd.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname{arg\\,max}"
---
<math>
    <mo lspace="0" rspace="0">arg max</mo>
</math>
