math-core/tests/snapshots/conversion_test__operator_name_with_spaces.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname{ hel lo }"
---
<math>
    <mo lspace="0" rspace="0">hello</mo>
</math>
