math-core/tests/snapshots/conversion_test__operator_name_with_text.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname{\\text{ab}c\\textit{de}f}"
---
<math>
    <mo lspace="0" rspace="0">abcdef</mo>
</math>
