math-core/tests/snapshots/conversion_test__operatorname_with_other_operator.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\operatorname{\\max}"
---
<math>
    <mi>x</mi>
    <mo lspace="0.1667em" rspace="0">max</mo>
</math>
